# draille

./: AGENTS.md  CHANGELOG.md  LICENSE  PROTOCOL.md  README.md  migrate.py  outcome.py  prime.py  pyproject.toml  record.py  test_doctor.py  test_guard.py  test_handover.py  test_init.py  test_migrate.py  test_prime.py  test_record.py  test_resolver.py  test_search.py  test_status.py
.github/workflows/: ci.yml
adapters/: README.md  claude-code.md  codex.md  copilot.md  cursor.md  gemini.md
adapters/search/: README.md  ripgrep.sh
docs/: backends.md  comparison.md
draille/: __init__.py  cli.py  doctor.py  handover.py  init.py  outcome.py  prime.py  record.py  search.py  status.py
examples/: walkthrough.md
