[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "draille"
version = "1.5.0"
description = "Plain-markdown durable memory for AI agents — any runtime, local, git-versioned, zero lock-in"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mathias Franceschi"}]
requires-python = ">=3.9"
keywords = ["ai", "agents", "memory", "markdown", "llm", "second-brain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
draille = "draille.cli:main"

[project.urls]
Repository = "https://github.com/MathiasFranceschi/draille"

[tool.setuptools]
packages = ["draille"]
